rns-lang/tests/snapshots/error-lexer-directives-dot_public_wasm.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.public static HelloWorl
----- STDERR -----
[E001] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_public.ja:1:1 ]
   │
 1 │ .public static HelloWorl
   │ ───┬───  
   │    ╰───── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
