rns-lang/tests/snapshots/error-lexer-directives-dot_semicolon_comment_wasm.snap
---
source: jasm/tests/jasm_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method
    ; real comment
    .;not_comment ;this is also a comment
.end
----- STDERR -----
[E001] Error: unknown directive
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/lexer/directives/dot_semicolon_comment.ja:3:5 ]
   │
 3 │     .;not_comment ;this is also a comment
   │     ──────┬──────  
   │           ╰──────── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
